--- a/templates/item/skill.html
+++ b/templates/item/skill.html
@@ -4,12 +4,12 @@
     </header>
     <div class="sheet-content">
         <div class="skill-block">
-            <label for="data.base">{{localize "CLEENMAIN.tooltip.skill"}} : </label>
-            <input title="{{localize 'CLEENMAIN.label.value'}}" id="skill" name="data.base" type="number" value="{{data.base}}"/>
+            <label for="system.base">{{localize "CLEENMAIN.tooltip.skill"}} : </label>
+            <input title="{{localize 'CLEENMAIN.label.value'}}" id="skill" name="system.base" type="number" value="{{system.base}}"/>
         </div>
         <div class="skill-block">
-            <label for="data.physical">{{localize "CLEENMAIN.skill.isPhysical"}} : </label>
-            <input title="{{localize 'CLEENMAIN.skill.isPhysical'}}" class="checkbox" name="data.physical" type="checkbox" {{checked data.physical}}>
+            <label for="system.physical">{{localize "CLEENMAIN.skill.isPhysical"}} : </label>
+            <input title="{{localize 'CLEENMAIN.skill.isPhysical'}}" class="checkbox" name="system.physical" type="checkbox" {{checked system.physical}}>
         </div>
     </div>
 </form>
