--- a/templates/item/boon.html
+++ b/templates/item/boon.html
@@ -8,20 +8,20 @@
                 {{#if (eq item.actor.type "player")}}
                     <div class="boon-block">
                         <div class="label-dev">{{localize "CLEENMAIN.boon.developedinfo"}}</div>
-                        <input class="checkbox" name="data.developed" type="checkbox" {{checked data.developed}}>
+                        <input class="checkbox" name="system.developed" type="checkbox" {{checked system.developed}}>
                     </div>
                 {{/if}}  
             {{else}}
                 <div class="boon-block">
                     <div class="label-dev">{{localize "CLEENMAIN.boon.developedinfo"}}</div>
-                    <input class="checkbox" name="data.developed" type="checkbox" {{checked data.developed}}>
+                    <input class="checkbox" name="system.developed" type="checkbox" {{checked system.developed}}>
                 </div>
             {{/if}}
             <div class="boon-block">
                 <div class="label-dev">{{localize "CLEENMAIN.boon.limiteduseinfo"}}</div>
-                <input class="checkbox" name="data.limitedUse" type="checkbox" {{checked data.limitedUse}}>
+                <input class="checkbox" name="system.limitedUse" type="checkbox" {{checked system.limitedUse}}>
             </div>
         </div>
-        {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+        {{editor system.description target="system.description" button=true owner=owner editable=editable}}
     </div>
 </form>
