--- a/templates/item/equipment.html
+++ b/templates/item/equipment.html
@@ -4,7 +4,7 @@
         <h1><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
     </header>
     <div class="sheet-content">
-        {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+        {{editor system.description target="system.description" button=true owner=owner editable=editable}}
     </div>
 </form>
 
