--- a/templates/item/weapon.html
+++ b/templates/item/weapon.html
@@ -26,8 +26,8 @@
                 </tr>
             </thead>
             <td>
-                <select name="data.category">
-                    {{#select data.category}}
+                <select name="system.category">
+                    {{#select system.category}}
                         {{#each config.weapon.category as |name type|}}
                             <option value="{{type}}">{{localize name}}</option>
                         {{/each}}
@@ -35,32 +35,32 @@
                 </select>
             </td>
             <td>
-                <select name="data.type">
-                    {{#select data.type}}
+                <select name="system.type">
+                    {{#select system.type}}
                         {{#each config.weapon.type as |name type|}}
                             <option value="{{type}}">{{localize name}}</option>
                         {{/each}}
                     {{/select}}
                 </select>
             </td>
-            <td><input name="data.damageBase" type="text" value="{{data.damageBase}}"/></td>
-            <td><input name="data.range" type="text" value="{{data.range}}" data-dtype="Number"/></td>
-            <td><input name="data.targets" type="text" value="{{data.targets}}" data-dtype="Number"/></td>
-            <td><input name="data.special" type="text" value="{{data.special}}"/></td>
-            <td><input name="data.zone" type="text" value="{{data.zone}}" /></td>
-            <td><input name="data.sixPlus" type="checkbox" {{checked data.sixPlus}}/></td>
+            <td><input name="system.damageBase" type="text" value="{{system.damageBase}}"/></td>
+            <td><input name="system.range" type="text" value="{{system.range}}" data-dtype="Number"/></td>
+            <td><input name="system.targets" type="text" value="{{system.targets}}" data-dtype="Number"/></td>
+            <td><input name="system.special" type="text" value="{{system.special}}"/></td>
+            <td><input name="system.zone" type="text" value="{{system.zone}}" /></td>
+            <td><input name="system.sixPlus" type="checkbox" {{checked system.sixPlus}}/></td>
             {{#if hasNpcOwner}}
-                <td><input name="data.skillValue" type="number" value="{{data.skillValue}}"/></td>
+                <td><input name="system.skillValue" type="number" value="{{system.skillValue}}"/></td>
                 {{#if (isSettingEnabled "advancedRules")}}
-                <td><input name="data.skillValueNpcElite" type="number" value="{{data.skillValueNpcElite}}"/></td>
+                <td><input name="system.skillValueNpcElite" type="number" value="{{system.skillValueNpcElite}}"/></td>
                 {{/if}}
                 {{else}}
-                    <td>{{data.skillName}}</td>
+                    <td>{{system.skillName}}</td>
             {{/if}}
             </table>
             
             <div class="description">{{localize "CLEENMAIN.label.description"}}</div>
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            {{editor system.description target="system.description" button=true owner=owner editable=editable}}
     </div>
 </form>
 
