--- a/less/chat/rollDialog.less
+++ b/less/chat/rollDialog.less
@@ -75,7 +75,11 @@
         }
         input{
             width: 3em;
-            -webkit-appearance: auto;
+        }
+        input[type=number]::-webkit-inner-spin-button, 
+        input[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: auto; 
+        margin: 0; 
         }
     }
     .paddingend{
