--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -125,7 +125,7 @@
                         .central-text{
                             margin: 0.3em .2em 0 .1em;
                         }
-                        .name-text, .blessure-text, .heroism-text, .health-text, .activity-text{
+                        .name-text, .wounds-text, .heroism-text, .health-text, .activity-text{
                             margin: 0.3em .3em 0 .3em;
                         }
                         .activity-text{
@@ -138,14 +138,17 @@
                             flex-direction: row;
                             justify-content: flex-start;
                             .health-input{
-                                width: 2em;
+                                width: 1em;
                             }
                         }
-                        .blessure-block{
+                        .wounds-block{
                             display: flex;
                             flex-direction: row;
                             select{
                                 margin: 0 .5em 0 0;
+                            }
+                            .wounds-input{
+                                width: 1em;
                             }
                         }
                     }
