--- a/templates/actor/player.html
+++ b/templates/actor/player.html
@@ -13,7 +13,7 @@
                 <div class="skills item-list">
                     {{#each skills as |skill type|}}
                         <div class="skill-line item" data-item-id="{{_id}}">
-                            <input class="inline-edit skill-name" data-field="name" type="text" value="{{skill.name}}" data-dtype="Text"/>
+                            <input class="inline-edit skill-name" data-field="name" type="text" value="{{skill.name}}" data-dtype="Text" data-item-id="{{_id}}"/>
                             <input class="inline-edit skill-value" data-field="data.base" type="number" name="skill.data.base" value="{{skill.data.base}}" data-dtype="Number" />
                             <input title="{{localize 'CLEENMAIN.skill.isDeveloped'}}" class="inline-edit skill-dev checkbox" data-field="data.developed" name="skill.data.developed" type="checkbox" {{checked skill.data.developed}}>
                             <input title="{{localize 'CLEENMAIN.skill.isPhysical'}}" class="inline-edit skill-physical checkbox" data-field="data.physical" name="skill.data.physical" type="checkbox" {{checked skill.data.physical}}>
@@ -74,8 +74,8 @@
                                 <div class="central-text">{{data.health.max}}</div>
                             {{/if}}
                         </div>
-                            <div class="blessure-block">
-                                <div class="health-text">{{localize "CLEENMAIN.label.wounds"}} :</div>
+                            <div class="wounds-block">
+                                <div class="wounds-text">{{localize "CLEENMAIN.label.wounds"}} :</div>
                                 <input class="wounds-input" title="{{localize 'CLEENMAIN.label.wounds'}}" id="wounds" name="data.wounds" type="number" value="{{data.wounds}}"/>                                
                             </div>
                     </div>
