--- a/less/chat/rollDialog.less
+++ b/less/chat/rollDialog.less
@@ -19,7 +19,7 @@
         border-radius: 6px;
     
         position: absolute;
-        right: 20px;
+        left: 20px;
         top: 20px;
         z-index: 1;
     }
@@ -63,25 +63,27 @@
             margin: 0 0 1em  1em;
         }
     }
-    .bonus-block{
-        display: flex;
-        flex-flow : row wrap;
-        .bonus-line{
-        margin: 1em 0 1em 0;
-        display: flex;
-        flex-direction: row;
-        flex-basis: 50%;
-        text-align: end;
+    .paddingend{
+        padding: 0 0 5em 0;
+    }
+    .bonus{
+        h2{
+            font-weight: bold;
         }
+    }
+    table {
+        table-layout: fixed;
+        width: 100%;
+        border-collapse: collapse;
+    }
+      td {
+        width: 25%;
         input{
             width: 3em;
         }
         input[type=number]::-webkit-inner-spin-button, 
         input[type=number]::-webkit-outer-spin-button { 
-        -webkit-appearance: auto; 
-        margin: 0; 
+        -webkit-appearance: auto;
         }
-    }
-    .paddingend{
-        padding: 0 0 5em 0;
-    }}
+      }
+}
