:sparkles: Change color to name's background

--- a/cleenmain.css
+++ b/cleenmain.css
@@ -799,3 +799,9 @@ input {
 .chatroll .finalText .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+#combat-tracker .combatant .token-name .player {
+  background-color: #1d351d;
+}
+#combat-tracker .combatant .token-name .npc {
+  background-color: #5c5353;
+}
