--- a/less/cleenmain.less
+++ b/less/cleenmain.less
@@ -14,3 +14,4 @@
 
 @import "../../../systems/cleenmain/less/chat/rollDialog.less";
 @import "../../../systems/cleenmain/less/chat/rollResult.less";
+@import "../../../systems/cleenmain/less/combat-tracker.less";
