:sparkles: Can spend one or two heroism points

--- a/templates/actor/player.html
+++ b/templates/actor/player.html
@@ -93,6 +93,7 @@
                                     <input class="checkbox" data-field="data.heroism.developed" name="data.heroism.developed" type="checkbox" {{checked data.heroism.developed}}>
                                 {{else}}
                                     <div class="central-text">{{data.heroism.max}}</div><i class="{{getCheckboxIcon  data.heroism.developed}} central-text"></i>
+                                    <i class="fas fa-arrow-down spend-heroism central-text" title="{{localize 'CLEENMAIN.heroism.spend'}}" ></i>
                                 {{/if}}
                         </div>
                     </div>
