--- a/templates/actor/tab/boons.html
+++ b/templates/actor/tab/boons.html
@@ -1,8 +1,8 @@
 <div class="boons-tab">
     {{#if unlocked}}
-        <h1>
-            <div class="line-label">{{localize "CLEENMAIN.boon.add"}} </div>
-            <a class="item-create" data-type="boon" title='{{localize "CLEENMAIN.boon.add"}}'><i class="fas fa-plus"></i></a>
+        <h1><br />
+            <div class="line-label">{{localize "CLEENMAIN.boon.add"}} 
+            <a class="item-create" data-type="boon" title='{{localize "CLEENMAIN.boon.add"}}'><i class="fas fa-plus"></i></a></div>
         </h1>
     {{/if}}
     <div class="boon-group droppable">
