--- a/less/tab/player-boons.less
+++ b/less/tab/player-boons.less
@@ -10,7 +10,7 @@
             display: flex;
             flex-direction: column;
             height: fit-content;
-            width: 50%;
+            min-width : 250px;
             padding: 1em 0.5em 0 0.5em;
             .boon-name-line{
                 height: fit-content;
