bad shape rolls

--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -138,7 +138,10 @@
                             flex-direction: row;
                             justify-content: flex-start;
                             .health-input{
-                                width: 1em;
+                                width: 2em;
+                            }
+                            .badshape-text{
+                                color: rgb(145, 40, 40);
                             }
                         }
                         .wounds-block{
