--- a/less/chat/rollDialog.less
+++ b/less/chat/rollDialog.less
@@ -32,14 +32,10 @@
         flex-direction: row;
         .introImg {
             border: none;
-            vertical-align: left;
-            text-align: center;
-            padding: 0px 5px 0px 55px;
-            background-size: 50px 70px;
-            background-position: 5px;
-            background-repeat: no-repeat;
-            height: 80px;
-            min-height: 80px;
+            padding: 5px;
+            width: 70px;
+            height: 70px;
+            object-fit: contain;
         }
         .introtext{
             font-size: @dialog-intro-font-size;
