--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -90,7 +90,9 @@
                 margin: 0 0 1em 0;
                 .intro-block-left{
                     align-self:center;
-                    min-width :100px;
+                    width :100px;
+                    height: 129px;
+                    object-fit: contain;
                 }
                 .intro-block-right{
                     display: flex;
