--- a/templates/actor/player.html
+++ b/templates/actor/player.html
@@ -37,7 +37,7 @@
         <div class="central">
             <div class="intro-block">
                 <div class="intro-block-left">
-                    <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="129" width="100"/>
+                    <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
                 </div>
                 <div class="intro-block-right">
                     <div class="central-line">
