--- a/less/npc-sheet.less
+++ b/less/npc-sheet.less
@@ -143,7 +143,9 @@
             .npcstat-block-right{
                 flex-basis: 30%;
                 text-align: center;
-                min-width: 200px;
+                width: 200px;
+                height: 250px;
+                object-fit: contain;
             }
         }
         
