--- a/templates/chat/rolldialog.html
+++ b/templates/chat/rolldialog.html
@@ -1,6 +1,6 @@
 <div class="dialog">
   <div class="intro">
-    <div class="introImg" style="background-image: url('{{actingCharImg}}')"></div>
+    <div class="introImg"><img src="{{actingCharImg}}" title="{{actingCharName}}" /></div>
     <div class="introtext">{{introText}}</div>
   </div>
   <div class="tooltip">
