--- a/cleenmain.css
+++ b/cleenmain.css
@@ -484,7 +484,7 @@ input {
   display: flex;
   flex-direction: column;
   height: fit-content;
-  min-width: 250px;
+  width: 50%;
   padding: 1em 0.5em 0 0.5em;
 }
 .boons-tab .boon-group .boon-card .boon-name-line {
