--- a/less/config.less
+++ b/less/config.less
@@ -51,6 +51,7 @@
 @chat-title-border-radius: 20px;
 @chat-modifier-font-style: italic;
 @chat-modifier-font-size: 0.9rem;
+@chat-end-height: 0px;
 
 h1 {
     font-family: "Signika";
@@ -96,5 +97,5 @@ input {
 @npcsheet-background: repeat url('../../../ui/parchment-white.jpg');
 @chat-background: repeat url('../../../ui/parchment-white.jpg');
 @chat-title-background: repeat url('../../../ui/denim.png');
-@chat-divider-background: top/50% repeat url('../../../ui/parchment-white.jpg');
+@chat-end-background: top/50% repeat url('../../../ui/parchment-white.jpg');
 @booncard-background: url('../../../ui/parchment-white.jpg');
