--- a/less/tab/player-boons.less
+++ b/less/tab/player-boons.less
@@ -26,6 +26,7 @@
                 color: @font-color-booncard;
                 font-family: @long-text-font;
                 font-size: @long-text-font-size;
+                max-width: 400px;
             }
             .icon-group{
                 margin-left: auto;
